<?xml version="1.0"?>
<package format="2">
  <name>hero_msgs</name>
  <version>0.0.0</version>
  <description>Contains messages, services, actions specific for the hero/hsrb robot</description>

  <maintainer email="jannolunenburg@gmail.com">Janno Lunenburg</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
